--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@raga-neobank/core": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@tanstack/query-async-storage-persister": "^5.90.2",
+    "@tanstack/query-core": "^5.90.7",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.75.4",
+    "@tanstack/react-query-persist-client": "^5.90.2",
     "next": "16.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
